--- a/E-commerce/e-commerce.ipynb
+++ b/E-commerce/e-commerce.ipynb
@@ -293,10 +293,10 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.preprocessing import OrdinalEncoder\n",
-        "df_new = df\n",
-        "encoder = OrdinalEncoder()\n",
-        "df_new[['Ship Mode', 'Segment', 'City', 'State', 'Region','Category', 'Sub-Category']] = encoder.fit_transform(df_new[['Ship Mode', 'Segment', 'City', 'State', 'Region','Category', 'Sub-Category']])"
+        "# from sklearn.preprocessing import OrdinalEncoder\n",
+        "# df_new = df\n",
+        "# encoder = OrdinalEncoder()\n",
+        "# df_new[['Ship Mode', 'Segment', 'City', 'State', 'Region','Category', 'Sub-Category']] = encoder.fit_transform(df_new[['Ship Mode', 'Segment', 'City', 'State', 'Region','Category', 'Sub-Category']])"
       ],
       "metadata": {
         "id": "VCslVdb_o2SF"
@@ -307,17 +307,17 @@
     {
       "cell_type": "code",
       "source": [
-        "plt.figure(figsize=(12,12))\n",
-        "sns.heatmap(df.corr(), annot=True)\n",
-        "plt.show()"
+        "# plt.figure(figsize=(12,12))\n",
+        "# sns.heatmap(df.corr(), annot=True)\n",
+        "# plt.show()"
       ],
       "metadata": {
-        "id": "gHZtnd9ho03l",
-        "outputId": "548a3440-5c47-4022-fa4a-681697d3017c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "gHZtnd9ho03l",
+        "outputId": "548a3440-5c47-4022-fa4a-681697d3017c"
       },
       "execution_count": 11,
       "outputs": [
